Fixed: a list pf pages overlapsed a dropdown menu.

--- a/src/public/css/construction/editor/features/_toolbar.scss
+++ b/src/public/css/construction/editor/features/_toolbar.scss
@@ -28,6 +28,7 @@
   
   .dropdown-menu {
     top: 20px;
+    z-index: 2000;
     
     .dropdown-item {
       cursor: pointer;
